--- a/roles/tests-integration/tasks/test-importer.yml
+++ b/roles/tests-integration/tasks/test-importer.yml
@@ -25,6 +25,10 @@
   become_user: "{{ fworch_user }}"
   environment: "{{ proxy_env }}"
   register: test_checkpoint_import_result
+  failed_when: >
+    test_checkpoint_import_result.rc != 0
+    or (test_checkpoint_import_result.stderr is defined
+        and test_checkpoint_import_result.stderr is search('\\[ERROR\\]'))
 
 - name: show checkpoint import result
   debug:
