--- a/roles/lib/tasks/remove-old-dotnet-versions.yml
+++ b/roles/lib/tasks/remove-old-dotnet-versions.yml
@@ -12,7 +12,7 @@
   loop: "{{ ansible_facts.packages.keys() | list }}"
   when:
     - item is match('^(dotnet|aspnetcore)-.*-\\d+\\.\\d+$')
-    - (item | regex_search('-(\\d+)\\.\\d+$', '\\1') | int) < dotnet_version_major
+    - (item | regex_search('-(\\d+)\\.\\d+$', '\\1') | int) < (dotnet_version_major | int)
 
 - name: remove dotnet packages older than target version
   package:
