--- a/roles/api/tasks/hasura-install.yml
+++ b/roles/api/tasks/hasura-install.yml
@@ -63,13 +63,17 @@
     path: "{{ api_hasura_cli_bin }}"
   register: api_cli_check
 
+# Only send Authorization when a token is provided.
+- name: build GitHub auth header
+  set_fact:
+    api_github_auth_header: "{{ {'Authorization': 'Bearer ' ~ api_github_token} if api_github_token is defined else {} }}"
+
 # only download new version of api cli, when not restoring from backup:
 - name: Get Hasura release info from GitHub (authenticated)
   uri:
     url: "https://api.github.com/repos/hasura/graphql-engine/releases/tags/{{ api_hasura_version }}"
     method: GET
-    headers:
-      Accept: "application/vnd.github+json"
+    headers: "{{ {'Accept': 'application/vnd.github+json'} | combine(api_github_auth_header) }}"
     return_content: true
   register: hasura_release
   environment: "{{ proxy_env }}"
@@ -97,13 +101,16 @@
   get_url:
     url: "https://api.github.com/repos/hasura/graphql-engine/releases/assets/{{ hasura_cli_asset_id }}"
     dest: "{{ api_hasura_cli_bin }}"
-    headers:
-      Accept: "application/octet-stream"
+    headers: "{{ {'Accept': 'application/octet-stream'} | combine(api_github_auth_header) }}"
     force: true
     mode: "0755"
     owner: "{{ fworch_user }}"
     group: "{{ fworch_group }}"
   environment: "{{ proxy_env }}"
+  register: api_hasura_cli_download
+  retries: 3
+  delay: 5
+  until: api_hasura_cli_download is succeeded
   become: true
   when:
     - not api_cli_check.stat.exists
@@ -118,6 +125,10 @@
     owner: "{{ fworch_user }}"
     group: "{{ fworch_group }}"
   environment: "{{ proxy_env }}"
+  register: api_hasura_cli_download_fallback
+  retries: 3
+  delay: 5
+  until: api_hasura_cli_download_fallback is succeeded
   become: true
   when:
     - not api_cli_check.stat.exists
