--- a/roles/tests-unit/tasks/main.yml
+++ b/roles/tests-unit/tasks/main.yml
@@ -40,6 +40,6 @@
       environment:
         PYTHONPATH: "/usr/local/fworch/importer"
       args:
-        chdir: "/usr/local/fworch/importer/test"
+        chdir: "/usr/local/fworch/importer/unit_tests"
       command: >
-        {{ importer_venv_dir }}/bin/python3 -m pytest -s . -v
+        {{ importer_venv_dir }}/bin/python3 -m pytest -s . -p no:cacheprovider -v
