refactor: Show test output in Ansible playbook

--- a/roles/tests-unit/tasks/main.yml
+++ b/roles/tests-unit/tasks/main.yml
@@ -43,3 +43,14 @@
         chdir: "/usr/local/fworch/importer/unit_tests"
       command: >
         {{ importer_venv_dir }}/bin/python3 -m pytest -s . -p no:cacheprovider -v
+      register: pytest_tests
+      ignore_errors: false
+
+    - name: show pytest output
+      debug:
+      var: pytest_tests.stdout_lines
+
+    - name: show pytest errors if any
+      debug:
+      var: pytest_tests.stderr_lines
+      when: pytest_tests.rc != 0
