feat: Finalize tests for fwconfig import object

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ exclude = [
     "scripts/release_lock.py"
 ]
 
+[tools.ruff.lint]
 ignore = [
     "ANN",     # flake8-annotations: Type annotation checks
     "COM",     # flake8-commas: Trailing comma checks
