--- a/roles/sample-auth-data/tasks/sample_owner_data.yml
+++ b/roles/sample-auth-data/tasks/sample_owner_data.yml
@@ -4,12 +4,26 @@
     db: "{{ fworch_db_name }}"
     query: >
       DO $do$ BEGIN
-        INSERT INTO owner (name, dn, group_dn, is_default, tenant_id, recert_interval, app_id_external) 
-            VALUES    ('ownerF_demo', 'uid=user1_demo,ou=tenant1_demo,ou=operator,ou=user,dc=fworch,dc=internal', 'cn=ownergroup_F_demo,ou=group,dc=fworch,dc=internal', false, 2, 30, '123')
+        INSERT INTO owner (name, is_default, tenant_id, recert_interval, app_id_external) 
+            VALUES    ('ownerF_demo', false, 2, 30, '123')
             ON CONFLICT DO NOTHING; 
-        INSERT INTO owner (name, dn, group_dn, is_default, tenant_id, recert_interval, app_id_external) 
-            VALUES    ('ownerD_demo', 'uid=user2_demo,ou=tenant2_demo,ou=operator,ou=user,dc=fworch,dc=internal', 'cn=ownergroup_D_demo,ou=group,dc=fworch,dc=internal', false, 3, 30, '234')
+        INSERT INTO owner (name, is_default, tenant_id, recert_interval, app_id_external) 
+            VALUES    ('ownerD_demo', false, 3, 30, '234')
             ON CONFLICT DO NOTHING; 
+
+        INSERT INTO owner_responsible (owner_id, dn, responsible_type)
+            VALUES    ((SELECT id FROM owner WHERE name='ownerF_demo'), 'uid=user1_demo,ou=tenant1_demo,ou=operator,ou=user,dc=fworch,dc=internal', 1)
+            ON CONFLICT DO NOTHING;
+        INSERT INTO owner_responsible (owner_id, dn, responsible_type)
+            VALUES    ((SELECT id FROM owner WHERE name='ownerF_demo'), 'cn=ownergroup_F_demo,ou=group,dc=fworch,dc=internal', 2)
+            ON CONFLICT DO NOTHING;
+
+        INSERT INTO owner_responsible (owner_id, dn, responsible_type)
+            VALUES    ((SELECT id FROM owner WHERE name='ownerD_demo'), 'uid=user2_demo,ou=tenant2_demo,ou=operator,ou=user,dc=fworch,dc=internal', 1)
+            ON CONFLICT DO NOTHING;
+        INSERT INTO owner_responsible (owner_id, dn, responsible_type)
+            VALUES    ((SELECT id FROM owner WHERE name='ownerD_demo'), 'cn=ownergroup_D_demo,ou=group,dc=fworch,dc=internal', 2)
+            ON CONFLICT DO NOTHING;
 
         INSERT INTO owner_network (owner_id, ip, ip_end) 
             VALUES    ((SELECT id FROM owner WHERE name='ownerF_demo'), '10.222.0.0', '10.222.0.31')
