--- a/roles/ui/tasks/main.yml
+++ b/roles/ui/tasks/main.yml
@@ -20,12 +20,6 @@
       delegate_to: "{{ inventory_hostname }}"
       when: ui_dir_check.stat.exists and installation_mode == "upgrade"
 
-    - name: remove ui dir
-      file:
-        state: absent
-        path: "{{ fworch_home }}/ui"
-      when: installation_mode == "upgrade"
-
     - name: create ui dir
       file:
         dest: "{{ ui_dir }}"
@@ -33,23 +27,14 @@
         owner: "{{ fworch_user }}"
         group: "{{ fworch_group }}"
 
-    - name: copy ui files to frontend target (localhost)
+    - name: copy ui files to frontend target
       synchronize:
         src: "FWO.UI"
         dest: "{{ ui_dir }}"
         rsync_opts:
-        - "--chown={{ fworch_user }}:{{ fworch_group }}"
+          - "--delete"
+          - "--chown={{ fworch_user }}:{{ fworch_group }}"
       tags: [ 'test' ]
-      when: inventory_hostname == 'localhost'
-
-    - name: copy ui files to frontend target (remote)
-      copy:
-        src: "FWO.UI"
-        dest: "{{ ui_dir }}"
-        owner: "{{ fworch_user }}"
-        group: "{{ fworch_group }}"
-      tags: [ 'test' ]
-      when: inventory_hostname != 'localhost'
 
   become: true
 
