--- a/site.yml
+++ b/site.yml
@@ -80,7 +80,7 @@
         name: "{{ ui_service_name }}"
         state: restarted
       become: true
-      when: "not installation_mode == 'uninstall'"
+      when: "not installation_mode == 'uninstall' and (ui_deploy_changed | default(false))"
   tags:
     - frontend
     - ui
