--- a/roles/finalize/tasks/main.yml
+++ b/roles/finalize/tasks/main.yml
@@ -67,7 +67,7 @@
     name: "{{ product_name }}-ui"
     state: restarted
   become: true
-  when: "'frontends' in group_names"
+  when: "'frontends' in group_names and (ui_deploy_changed | default(false))"
   
 - name: test whether demo data is present
   postgresql_query:
@@ -134,7 +134,7 @@
     name: "{{ product_name }}-middleware"
     state: restarted
   become: true
-  when: "'middlewareserver' in group_names"
+  when: "'middlewareserver' in group_names and (mw_deploy_changed | default(false))"
 
 # TODO - find out why UI sometimes crashes during upgrade of heavy data installations
 - name: finally restart UI
@@ -142,4 +142,4 @@
     name: "{{ product_name }}-ui"
     state: restarted
   become: true
-  when: "'frontends' in group_names"
+  when: "'frontends' in group_names and (ui_deploy_changed | default(false))"
