--- a/roles/middleware/tasks/install_and_run_mw_service.yml
+++ b/roles/middleware/tasks/install_and_run_mw_service.yml
@@ -5,8 +5,13 @@
     backup: true
     mode: "0644"
     owner: "root"
+  register: mw_service_template
   become: true
   environment: "{{ proxy_env }}"
+
+- name: track middleware deployment changes from systemd template
+  set_fact:
+    mw_deploy_changed: "{{ (mw_deploy_changed | default(false)) or mw_service_template.changed }}"
 
 - name: publish middlewareserver
   command: "dotnet publish --no-self-contained -c {{ dotnet_mode }} -o {{ middleware_server_start_dir }}/bin/{{ dotnet_mode }}/net{{ dotnet_version }}"
@@ -16,11 +21,12 @@
   become_user: "{{ fworch_user }}"
   environment: "{{ proxy_env }}"
   register: publish_result
+  when: mw_deploy_changed | default(false)
 
 - name: fail if publish returned an error
   fail:
     msg: "could not publish middleware server successfully: {{ publish_result }}"
-  when: publish_result.rc != 0
+  when: publish_result is defined and publish_result.rc != 0
 
 - name: make middleware service run at host startup
   systemd:
