ui restart also on version changes

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -61,6 +61,7 @@
         - name: get version of currently installed product
           set_fact:
             old_version: "{{ config.product_version }}"
+            product_version_changed: "{{ config.product_version != product_version }}"
 
       when: already_installed and installation_mode == "upgrade"
 
