--- a/roles/tests-integration/handlers/main.yml
+++ b/roles/tests-integration/handlers/main.yml
@@ -12,6 +12,13 @@
       db: "{{ fworch_db_name }}"
       query: >
         DO $do$ BEGIN 
+        DELETE FROM rule_metadata
+        WHERE mgm_id IN (
+          SELECT m.mgm_id
+          FROM management m
+          JOIN import_credential ic ON ic.id = m.import_credential_id
+          WHERE ic.credential_name='{{ test_credential_name }}'
+        );
         DELETE FROM import_credential WHERE credential_name='{{ test_credential_name }}'; 
         END $do$ 
     listen: "test importer handler"
