--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -230,6 +230,27 @@
         mode: "0750"
       when: "installation_mode == 'new'"
 
+    - name: check importer password file exists
+      stat:
+        path: "{{ importer_password_file }}"
+      register: importer_pwd_stat
+      when: "installation_mode == 'new' and inventory_hostname in groups['middlewareserver']"
+
+    - name: set importer password for secrets file
+      set_fact:
+        importer_password: "{{ randomly_generated_pwd }}"
+      when: "installation_mode == 'new' and inventory_hostname in groups['middlewareserver'] and not importer_pwd_stat.stat.exists"
+
+    - name: write importer password to secrets directory
+      copy:
+        content: "{{ importer_password }}\n"
+        dest: "{{ importer_password_file }}"
+        mode: "0600"
+        owner: "{{ fworch_user }}"
+        group: "{{ fworch_group }}"
+      become: true
+      when: "installation_mode == 'new' and inventory_hostname in groups['middlewareserver'] and not importer_pwd_stat.stat.exists"
+
     - name: generate main key
       set_fact:
         main_key: "{{ randomly_generated_pwd }}" # 32 bytes
