--- a/roles/middleware/tasks/main.yml
+++ b/roles/middleware/tasks/main.yml
@@ -115,29 +115,17 @@
     ca_path: "{{ openldap_server_enable_ssl | ternary(openldap_server_cert, omit) }}"
   when: installation_mode == 'new'
 
-- name: set importer user password randomly
-  set_fact:
-    importer_password: "{{ randomly_generated_pwd }}"
-  when: not testkeys|bool and installation_mode == 'new'
-
-- name: write importer_password to secrets directory
-  copy:
-    content: "{{ importer_password }}\n"
-    dest: "{{ importer_password_file }}"
-    mode: '0600'
-    owner: "{{ fworch_user }}"
-    group: "{{ fworch_group }}"
+- name: read importer password from secrets directory
+  slurp:
+    src: "{{ importer_password_file }}"
+  register: importer_password_slurp
   become: true
   when: installation_mode == 'new'
 
-# the local copy of the import pwd will be used by the importer role to copy it to the importer host(s)
-- name: fetch importer pwd to installer machine for distribution to importer machines
-  fetch:
-    src: "{{ importer_password_file }}"
-    dest: "{{ importer_password_file_on_installer }}"
-    flat: true
-    mode: '0600'
-  become: true
+- name: set importer password fact from secrets directory
+  set_fact:
+    importer_password: "{{ importer_password_slurp.content | b64decode | trim }}"
+  when: installation_mode == 'new'
 
 - name: Set importer password in ldap
   ldap_passwd:
