--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,8 +20,8 @@
       "-s",
       "./roles/importer/files/importer/test"
     ],
-    "python.testing.pytestEnabled": false,
-    "python.testing.unittestEnabled": true,
+    "python.testing.pytestEnabled": true,
+    "python.testing.unittestEnabled": false,
     "[python]": {
       "editor.formatOnSave": true,
       "editor.codeActionsOnSave": {
@@ -33,5 +33,5 @@
     "sonarlint.connectedMode.project": {
         "connectionId": "cactusesecurity",
         "projectKey": "CactuseSecurity_firewall-orchestrator"
-    }
+    },
 }
