--- a/documentation/interface-descriptions-json/sample-firewall-normalized-config-multi-manager.json
+++ b/documentation/interface-descriptions-json/sample-firewall-normalized-config-multi-manager.json
@@ -10,7 +10,7 @@
       "SubManagerIds": [],
       "Configs": [
         {
-          "ConfigFormat": "NORMALIZED_LEGACY",
+          "ConfigFormat": "NORMALIZED",
           "action": "INSERT",
           "network_objects": {
             "fb6dc52c-a40e-51f0-58af-1e9bdb08123e": {
@@ -64,7 +64,7 @@
       "SubManagerIds": [],
       "Configs": [
         {
-          "ConfigFormat": "NORMALIZED_LEGACY",
+          "ConfigFormat": "NORMALIZED",
           "action": "INSERT",
           "network_objects": {
             "4340e634-add5-51f0-f96e-1a939e4c3326": {
